<feat> add email sending for user activation
